# Docsly

frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CollabRequestDropdown.tsx  CreateNewPopUp.tsx  DocumentGrid.tsx  DocumentOptionsDropdown.tsx
frontend/src/context/auth/: useAuthGuard.ts
frontend/src/lib/: api.ts  batchUpdate.ts  utils.ts
frontend/src/pages/: Auth.tsx  Collab.tsx  Dashboard.tsx  Edit.tsx  Home.tsx  NotFound.tsx  NotFoundWithoutAuth.tsx
rust-backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
rust-backend/src/: main.rs  middleware.rs
rust-backend/src/db/: mod.rs
rust-backend/src/models/: mod.rs
rust-backend/src/routes/: auth.rs  docs.rs  edit.rs  mod.rs  user.rs
rust-backend/src/utils/: mod.rs
