[package]
name = "Docsly"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.48.0", features = ["full"]}
axum = {version = "0.8.7", features = ["ws"]}
tower-cookies = "0.11.0"
log = "0.4.29"
env_logger = "0.11.8"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
mongodb = "3.4.1"
futures = "0.3.31"
jsonwebtoken = {version = "10.2.0" , features = ["rust_crypto"]}
tower-http = { version = "0.5", features = ["cors"] }
chrono = {version = "0.4.42", features = ["serde"]}